# AI-Shell

./: .gitignore  AGENTS.md  Dockerfile.pyoxidizer  README.md  agent-dev.py  agent.py  config.yaml  context.md  install.sh  main.py  pyproject.toml  requirements.txt
.bak/: agent.py
ai-shell-build/: pyoxidizer.bzl
src/: app.py  chat.py  commands.py  config.py  constants.py  conversation_manager.py  input_handler.py  models.py  style.tcss  task_manager.py  terminal_input.py  ui.py  web_search.py
src/ai_shell/: __init__.py  app.py  chat.py  command_safety.py  commands.py  config.py  constants.py  context_manager.py  conversation_manager.py  logger.py  main.py  models.py  terminal_input.py  theme.py  ui.py  web_search.py
